# src/main/java/ru/relex/minisocialnetwork/rest/UserRestController.java
@@ -2,12 +2,9 @@ package ru.relex.minisocialnetwork.rest;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
-import ru.relex.minisocialnetwork.model.dto.UserDetailsDto;
 import ru.relex.minisocialnetwork.model.dto.UserDto;
 import ru.relex.minisocialnetwork.model.dto.UserPasswordDto;
 import ru.relex.minisocialnetwork.model.dto.UserRegistrationDto;
@@ -22,9 +19,6 @@ import javax.validation.Valid;
 @RestController
 @RequestMapping("/api/v1/users")
 public class UserRestController {
-
-    @Value("${authentication.defaultPrincipal}")
-    private String defaultPrincipal;
 
     private final UserService userService;
     private final SecurityContextFacade securityContextFacade;
@@ -42,31 +36,22 @@ public class UserRestController {
 
     @PutMapping
     public ResponseEntity<String> updateUser(@RequestBody @Valid final UserDto userDto) {
-        final Authentication authentication = securityContextFacade.getContext().getAuthentication();
-        if (authentication.getPrincipal().equals(defaultPrincipal)) {
-            return new ResponseEntity<>("User wasn't updated due to unauthorized!", HttpStatus.FORBIDDEN);
-        }
-        final UserDetailsDto userDetailsDto = (UserDetailsDto) authentication.getPrincipal();
-        final int id = userDetailsDto.getId();
-        userService.updateUserById(id, userDto);
+        final String email = (String) securityContextFacade.getContext().getAuthentication().getPrincipal();
+        userService.updateUserByEmail(email, userDto);
         return new ResponseEntity<>("User was updated!", HttpStatus.OK);
     }
 
     @PutMapping("/update-password")
     public ResponseEntity<String> updateUserPassword(@RequestBody @Valid final UserPasswordDto userPasswordDto) {
-        final Authentication authentication = securityContextFacade.getContext().getAuthentication();
-        if (authentication.getPrincipal().equals(defaultPrincipal)) {
-            return new ResponseEntity<>("User's password wasn't updated due to unauthorized!", HttpStatus.FORBIDDEN);
-        }
-        final UserDetailsDto userDetailsDto = (UserDetailsDto) authentication.getPrincipal();
-        final int id = userDetailsDto.getId();
-        userService.updateUserPasswordById(id, userPasswordDto);
+        final String email = (String) securityContextFacade.getContext().getAuthentication().getPrincipal();
+        userService.updateUserPasswordByEmail(email, userPasswordDto);
         return new ResponseEntity<>("User's password was updated!", HttpStatus.OK);
     }
 
-    @DeleteMapping("/{id}")
-    public void deleteUser(@PathVariable final int id) {
-        userService.deleteUserById(id);
+    @DeleteMapping
+    public void deleteUser() {
+        final String email = (String) securityContextFacade.getContext().getAuthentication().getPrincipal();
+        userService.deleteUserByEmail(email);
     }
 
 }
