# swagger-api.json
@@ -475,6 +475,30 @@
             "description": "Not Found"
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "user-rest-controller"
+        ],
+        "summary": "deleteUser",
+        "operationId": "deleteUserUsingDELETE",
+        "produces": [
+          "*/*"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
       }
     },
     "/api/v1/users/register": {
@@ -607,40 +631,6 @@
             "description": "Not Found"
           }
         }
-      },
-      "delete": {
-        "tags": [
-          "user-rest-controller"
-        ],
-        "summary": "deleteUser",
-        "operationId": "deleteUserUsingDELETE",
-        "produces": [
-          "*/*"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "id",
-            "required": true,
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        }
       }
     }
   },
@@ -655,6 +645,9 @@
           "type": "string"
         },
         "status": {
+          "type": "string"
+        },
+        "username": {
           "type": "string"
         }
       },
